<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LayoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_azul_claro"
    android:elevation="4dp"
    android:orientation="horizontal"
    android:padding="8dp"
    android:weightSum="1">

    <!-- Títulos -->
    <TextView
        android:id="@+id/Position_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/rank"
        android:textSize="18sp"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/Usuario_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/user"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Points_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/points"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
