<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.esei.dm.adivinarelescudo.Actividad_profile"
    android:background="@color/background_azul_claro">

    <LinearLayout
        android:id="@+id/LayoutPerfil"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="1">

        <!-- Título -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/border_rectangle">

            <TextView
                android:id="@+id/perfil_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/mi_perfil"
                android:textColor="@color/azul_oscuro"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Bloque de Nombre de Usuario -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp"
            android:text="@string/username_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usuarioActivo_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/cuadradito_fondo"
            android:gravity="center"
            android:padding="12dp"
            android:textColor="@color/azul_oscuro"
            android:textSize="18sp" />

        <!-- Bloque de Correo Electrónico -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="40dp"
            android:text="@string/correo_label"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/correoActivo_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/cuadradito_fondo"
            android:gravity="center"
            android:padding="12dp"
            android:textColor="@color/azul_oscuro"
            android:textSize="18sp" />

        <!-- Bloque de Puntos -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="40dp"
            android:text="@string/puntos"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/puntosActivo_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/cuadradito_fondo"
            android:gravity="center"
            android:padding="12dp"
            android:textColor="@color/azul_oscuro"
            android:textSize="18sp" />

        <!-- Botón Modificar Usuario -->
        <Button
            android:id="@+id/button_modificar_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modify_user"
            android:textColor="@color/white"
            android:backgroundTint="@color/azul_oscuro"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="1dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_volverHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/azul_oscuro"
            android:text="@string/go_back"
            android:textColor="@color/white"
            android:textStyle="bold">

        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
